Fix table resizing; Add horizontal scroll as fail-safe

--- a/TMNApi/TMNApi/css/site.css
+++ b/TMNApi/TMNApi/css/site.css
@@ -46,6 +46,7 @@ h3 {
     width: 49%;
     padding-bottom:30px;
     clear:left;
+    overflow-x:auto;
 }
 
 .right {
@@ -53,10 +54,7 @@ h3 {
     width: 49%;
     padding-bottom:30px;
     clear:right;
-}
-
-#data-table {
-    font-size: 0.65vw;
+    overflow-x:auto;
 }
 
 .home {
